# bristo

./: Cargo.toml  README.md
app/: Cargo.toml
app/assets/: Bristo.icns
app/src/: app_modal.rs  app_state.rs  app_task.rs  app_update.rs  app_window.rs  main.rs
cleaner/: Cargo.toml
cleaner/src/: app_data.rs  foundation.rs  helpers.rs  lib.rs  rules.rs  syscom.rs
cleaner/src/app_data/: app_info.rs  app_process.rs  associate_files.rs  locations_scan.rs  log_receipt.rs  plist_reader.rs
cleaner/src/foundation/: c_sys_conf.rs  ns_file_manager.rs  ns_kill_process.rs  sys_bom_log.rs  sys_conf.rs  sys_kill_process.rs
cleaner/src/syscom/: sys_bom_log.rs
cleaner/tests/: scanner_test.rs
common-debug/: Cargo.toml
common-debug/src/: lib.rs
