[package]
name = "app"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "Bristo"
path = "src/main.rs"

[dependencies]
common-debug = { workspace = true }
widget = { workspace = true }
status = { workspace = true }
cleaner = { workspace = true }

# ====================
anyhow = { workspace = true }
rfd = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
iced = { workspace = true }


# ====================
[package.metadata.bundle.bin.Bristo]
name = "Bristo"
identifier = "com.ziprangga.Bristo"
icon = ["assets/Bristo.icns"]
copyright = "Copyright (c) 2026 ziprangga. Licensed under MIT or Apache-2.0."
category = "Utilities"
short_description = "Application Uninstaller"
long_description = "Lightweight macOS cleanup tool built with a simple GUI, It helps safely inspect and remove unnecessary application files, including protected locations, BOM logs, and app metadata"
