[package]
name = "app"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "Bristo"
path = "src/main.rs"

[dependencies]
widget = { workspace = true }
cleaner = { workspace = true }

# ====================
simple-status = { workspace = true }
mini-logger = { workspace = true }
anyhow = { workspace = true }
rfd = { workspace = true }
tokio = { workspace = true }
iced = { workspace = true }


# ====================
[package.metadata.bundle.bin.Bristo]
name = "Bristo"
identifier = "com.ziprangga.Bristo"
icon = ["assets/Bristo.icns"]
copyright = "Copyright (c) 2026 ziprangga. Licensed under MIT or Apache-2.0."
category = "Utilities"
short_description = "Application Uninstaller"
long_description = "Lightweight macOS cleanup tool built with a simple GUI, It helps safely inspect and remove unnecessary application files, including protected locations, BOM logs, and app metadata"
